# pow-captcha

./: Cargo.toml  TODOs.md
.cargo/: config.toml
src/: common.rs  lib.rs  signing.rs  store.rs
src/pow/: common.rs  exact.rs  mod.rs  prefix.rs
src/solver/: main.rs
src/store/: mod.rs  redis.rs
tests/: integration_tests.rs  store_test_redis.rs
