[package]
name = "pow-captcha"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
base64 = { version = "0.22.1", optional = true }
bitcode = { version = "0.6.4", optional = true }
rand = "0.9.0"
rayon = { version = "1.10.0", optional = true }

# We need some serialization crate for store and encoding for the cli

[features]
default = ["serialize", "multithreading-cli"]
store = []
signing = []
serialize = ["bitcode", "base64"]
multithreading-cli = ["rayon"]

[[bin]]
name = "pow-captcha-cli"
path = "src/solver/main.rs"
features = ["serialize", "multithreading-cli"]
