[package]
name = "pow-captcha"
version = "0.1.0"
authors = ["Abrudan Paul - Andrei <paulandreiabrudan@protonmail.com>"]
description = "Proof of Work captcha using bcrypt with a CLI solver included"
homepage = "https://github.com/PaulDotSH/pow-captcha"
repository = "https://github.com/PaulDotSH/pow-captcha"
keywords = ["captcha", "bcrypt"]
categories = ["Web programming", "Captcha"]
license = "GPL-3.0"
license-file = "LICENSE"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
base64 = { version = "0.22.1", optional = true }
bitcode = { version = "0.6.4", optional = true }
rand = "0.9.0"
rayon = { version = "1.10.0", optional = true }

# We need some serialization crate for store and encoding for the cli

[features]
default = ["serialize", "multithreading-cli"]
store = []
signing = []
serialize = ["bitcode", "base64"]
multithreading-cli = ["rayon"]

[[bin]]
name = "pow-captcha-cli"
path = "src/solver/main.rs"
features = ["serialize", "multithreading-cli"]
